--- a/environment.yml
+++ b/environment.yml
@@ -24,5 +24,5 @@ dependencies:
     
     - pip:
         # - <some package only available on PyPI>
-        - -e .  # build local dgik4cr package
+        - -e .  # build local cidgikc package
         - mosek==9.3.21
